--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="blueColor">#0000ff</color>
     <color name="greenColor">#00ff00</color>
+    <color name="redColor">#ff0000</color>
 </resources>
